# plusgrade-assessment

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  conftest.py  main.py
app/api/: __init__.py
app/api/core/: tax.py
app/api/endpoints/: calculate.py
app/api/models/: tax.py
app/tests/api/core/: test_tax.py
app/tests/api/endpoints/: test_calculate.py
