[tool.poetry]
name = "tax-calculator"
version = "1.0.0"
description = "A FastAPI application for calculating total income tax based on salary and tax year."
authors = ["Deep Raval <deepraval2905@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
requests = "^2.31.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
singleton-decorator = "^1.0.0"
tenacity = "^8.2.3"
types-requests = "^2.31.0.20240406"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
mypy = "^1.9.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
mock = "^5.1.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.poetry.scripts]
test = "poetry run pytest --cov=app"
coverage = "poetry run pytest --cov=app --cov-report=html"
lint = "poetry run ruff check app --fix --select I"
typecheck = "poetry run mypy app"
